# infrastructure-security-auditor

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  README.md  README_AUDITOR.md  analysis_windows.json  auditor.py  implementation_plan.md  localhost_scan.json  network_scan_192_168_50_0_24.json  psi.py  pyproject.toml  pyrightconfig.json  requirements.txt  scan_windows.json  setup.py  setup.sh  walkthrough.md
.github/workflows/: ci-cd.yml
backend/cli/: TESTING.md  __init__.py  api_client.py  auth.py  config.py  conftest.py  formatters.py  local_db.py  main.py  pytest.ini  requirements-cli.txt  setup.py
backend/core-api/: psi_local.db  requirements.txt  run_local.py
backend/job-orchestrator/: Dockerfile  celery_app.py  metrics.py  requirements.txt  scheduler_service.py  status_tracker.py  tasks.py
backend/scan-workers/: __init__.py  result_parser.py  schema.py  worker_pool.py
database/: schema.sql
docker/: api.Dockerfile  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  SECURITY.md  USAGE.md
examples/: CASE_STUDIES.md
examples/case_studies/: case_study_1.md  case_study_2.md
examples/sample_scans/: sample_scan_windows_server.json  sample_scan_with_findings.json
monitoring/: prometheus.yml
src/: __init__.py  cli.py  config.py
src/analyzer/: __init__.py  analyzer.py  risk_scorer.py
src/remediator/: __init__.py  playbook_gen.py
src/reporter/: __init__.py  html_generator.py  network_reporter.py
src/scanner/: __init__.py  batch_scanner.py  linux_scanner.py  network_discovery.py  windows_scanner.py
src/tui/: __init__.py  components.py  (+5 more)
tests/: __init__.py  test_analyzer.py  test_basic.py  test_batch_scanner.py  test_integration.py  test_linux_scanner.py  test_network_discovery.py  test_network_reporter.py  test_remediator.py  test_reporter.py  test_scanner.py
(+54 files in other folders)
